WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57577
[chromium] Fix ownership semantics for LayerChromium/CCLayerImpl
https://bugs.webkit.org/show_bug.cgi?id=57577
Summary
[chromium] Fix ownership semantics for LayerChromium/CCLayerImpl
Adrienne Walker
Reported
2011-03-31 14:15:36 PDT
[chromium] Fix ownership semantics for LayerChromium/CCLayerImpl
Attachments
Patch
(10.74 KB, patch)
2011-03-31 14:32 PDT
,
Adrienne Walker
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-03-31 14:32:50 PDT
Created
attachment 87787
[details]
Patch
James Robinson
Comment 2
2011-03-31 14:38:27 PDT
Comment on
attachment 87787
[details]
Patch You knew I was gonna ask - test?
Adrienne Walker
Comment 3
2011-03-31 14:42:52 PDT
If I knew how to reproduce this bug reliably, I would happily check in a test. I just don't want to check in a test with setTimeout('window.location.reload()', 100) in it. That would go directly into the FLAKY bin. Do you have any suggestions on how to test this better? However, I did run it through the LayoutTests/compositing suite (which caught a correctness issue that I fixed).
Adrienne Walker
Comment 4
2011-03-31 15:07:19 PDT
Committed
r82624
: <
http://trac.webkit.org/changeset/82624
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug