Source/WebCore/platform/graphics/chromium/cc/CCLayerImpl.cpp
@@ -126,7 +126,7 @@ bool CCLayerImpl::descendantsDrawsContent()
 // These belong on CCLayerImpl, but should be overridden by each type and not defer to the LayerChromium subtypes.
 bool CCLayerImpl::drawsContent() const
 {
-    return m_owner->drawsContent();
+    return m_owner && m_owner->drawsContent();
 }
 
 void CCLayerImpl::draw()
@@ -151,6 +151,7 @@ void CCLayerImpl::bindContentsTexture()
 
 void CCLayerImpl::cleanupResources()
 {
+    m_owner = 0;
     if (renderSurface())
         renderSurface()->cleanupResources();
 }
@@ -215,4 +216,3 @@ void CCLayerImpl::dumpLayerProperties(TextStream& ts, int indent) const
 }
 
 #endif // USE(ACCELERATED_COMPOSITING)
-
